--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         </div> -->
 
         <div class="box">
-            <img src="images/web.png" alt="">
+            <img src="images/web.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3));">
             <div class="content">
                 <h3>PROJECT 01</h3>
                 <h3>Online Hotel Booking System</h3>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/paesano.png" alt="">
+            <img src="images/web/2.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 02</h3>
                 <h3>Paesano Appointment System</h3>
@@ -77,7 +77,7 @@
             </div>
         </div> -->
         <div class="box">
-            <img src="images/star.jpg" alt="">
+             <img src="images/web/3.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 03</h3>
                 <h3>Starbuckz</h3>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/library.jpg" alt="">
+            <img src="images/web/4.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 04</h3>
                 <h3>Library Management System</h3>
@@ -104,7 +104,7 @@
             </div>
         </div> -->
         <div class="box">
-            <img src="images/feutech1.png" alt="">
+            <img src="images/web/5.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 05</h3>
                 <h3>E-commerce system</h3>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/tabulation.jpg" alt="">
+            <img src="images/web/1.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 06</h3>
                 <h3>Tabulation System</h3>
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/system 1.jpg" alt="">
+            <img src="images/web/6.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 07</h3>
                 <h3>MIS System 01</h3>
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/system 2.jpg" alt="">
+            <img src="images/web/7.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 08</h3>
                 <h3>MIS System 02</h3>
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/psycho.jpg" alt="">
+            <img src="images/web/8.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 09</h3>
                 <h3>ISPSC System 03</h3>
@@ -149,30 +149,31 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/python-1.jpg" alt="">
+             <img src="images/web/9.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 10</h3>
                 <h3>Todo-App</h3>
                 <p>I created this todo python application as my project requirement.</p>
+                <a href="#" onclick="event.preventDefault(); openModal('images/web/9.png')">Preview</a>
                 <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
             </div>
         </div>
         <div class="box">
-            <img src="images/python-2.jpg" alt="">
+             <img src="images/web/10.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 11</h3>
                 <h3>tricycle at your service</h3>
                 <p>I created this booking python application for the tricycle drivers at santa maria, ilocos sur.</p>
-                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/web/10.png')">Preview</a>
             </div>
         </div>
         <div class="box">
-            <img src="images/python-3.jpg" alt="">
+             <img src="images/web/11.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
             <div class="content">
                 <h3>PROJECT 12</h3>
                 <h3>Grocery List APp</h3>
                 <p>I created this grocery python application for the users to list their grocery.</p>
-                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/web/11.png')">Preview</a>
             </div>
         </div>
         <div class="box">
