added a photoboth project

--- a/index.html
+++ b/index.html
@@ -649,6 +649,16 @@
                 <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
             </div>
         </div>
+        <div class="box">
+            <img src="images/web/12.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
+            <div class="content">
+                <h3>PROJECT 14</h3>
+                <h3>photobooth</h3>
+                <p>With photobooths becoming a hit at events, I built this website as a fun side project to highlight its potential. 
+                    It’s designed to be simple, eye catching, and ready for real world use.</p>
+                <a href="http://booth.personatab.com/" target="_blank">View Website</a>
+            </div>
+        </div>
 
         
 </div>
