added new project

--- a/index.html
+++ b/index.html
@@ -659,6 +659,17 @@
                 <a href="http://booth.personatab.com/" target="_blank">View Website</a>
             </div>
         </div>
+        <div class="box">
+            <img src="images/web/13.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
+            <div class="content">
+                <h3>PROJECT 15</h3>
+                <h3>Ease-Kolar</h3>
+                <p style="font-size: 10px;">I had the opportunity to assist in the development of this system in collaboration with my clients. 
+                    Together, we worked on building a functional, user-friendly platform tailored to meet their specific needs. 
+                    It was a rewarding experience to contribute to a project that supports digital transformation and improves accessibility for its users.</p>
+                <a href="https://ispsc.ease-kolar.com/" target="_blank">View Website</a>
+            </div>
+        </div>
 
         
 </div>
