added more portfolio

--- a/index.html
+++ b/index.html
@@ -846,6 +846,36 @@
                 <a href="#" onclick="event.preventDefault(); openModal('images/Poster-5.jpg')">Preview Poster</a>
             </div>
         </div>
+        <div class="box">
+            <img src="images/Poster-6.jpg" alt="">
+            <div class="content">
+                <h3>Poster 06</h3>
+                <p></p>
+                <!-- <a href="https://drive.google.com/drive/folders/1Me8FxH7bwaKysUxvSpUFkUOVM_eB4BZG?usp=sharing" 
+                target="_blank">Preview Poster</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/Poster-6.jpg')">Preview Poster</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/Poster-7.png" alt="">
+            <div class="content">
+                <h3>Poster 07</h3>
+                <p></p>
+                <!-- <a href="https://drive.google.com/drive/folders/1Me8FxH7bwaKysUxvSpUFkUOVM_eB4BZG?usp=sharing" 
+                target="_blank">Preview Poster</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/Poster-7.png')">Preview Poster</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/Poster-8.jpg" alt="">
+            <div class="content">
+                <h3>Poster 08</h3>
+                <p></p>
+                <!-- <a href="https://drive.google.com/drive/folders/1Me8FxH7bwaKysUxvSpUFkUOVM_eB4BZG?usp=sharing" 
+                target="_blank">Preview Poster</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/Poster-8.jpg')">Preview Poster</a>
+            </div>
+        </div>
 
     </div>
 
@@ -915,13 +945,24 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/Shirts/jake.jpg" alt="" >
+            <img src="images/Shirts/jersey1.jpg" alt="" >
             <div class="content">
                 <h3>Shirt Designs 07</h3>
                 <p></p>
                 <!-- <a href="https://drive.google.com/drive/folders/1AFpFMYfsK9UQ02ADl_PJbVB6ZVSvZoMD?usp=share_link" 
                 target="_blank">Preview Designs</a> -->
-                <a href="#" onclick="event.preventDefault(); openModal('images/Shirts/jake.jpg')">Preview</a>
+                <a href="#" onclick="event.preventDefault(); openModal('images/Shirts/jersey1.jpg')">Preview</a>
+                
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/Shirts/jersey2.jpg" alt="" >
+            <div class="content">
+                <h3>Shirt Designs 08</h3>
+                <p></p>
+                <!-- <a href="https://drive.google.com/drive/folders/1AFpFMYfsK9UQ02ADl_PJbVB6ZVSvZoMD?usp=share_link" 
+                target="_blank">Preview Designs</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/Shirts/jersey2.jpg')">Preview</a>
                 
             </div>
         </div>
