--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
      <link rel="icon" type="image/x-icon" href="images/logo.ico" />
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  
     <link rel="stylesheet" href="./css/style.css">
     <a href="./home"></a>
@@ -42,7 +43,7 @@
 <section class="home">
 
     <div class="image">
-        <img src="images/mepic.jpg" alt="">
+        <img src="images/me/5.jpg" alt="">
     </div>
 
     <div class="content">
@@ -1040,6 +1041,22 @@
 
     </div>
 
+    
+   <form id="contactForm" method="POST">
+        <div class="inputBox">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="number" name="number" placeholder="Your Number">
+        </div>
+
+        <div class="inputBox">
+            <input type="email" name="email" placeholder="Your Email" required>
+            <input type="text" name="subject" placeholder="Your Subject">
+        </div>
+
+        <textarea name="message" placeholder="Your Message" cols="30" rows="10" required></textarea>
+
+        <input type="submit" value="send message" class="btn">
+    </form>
    
 </div>
 
@@ -1047,15 +1064,10 @@
 
 <!-- contact section ends -->
 
-<!--Thank You Section-->
-<div class="thankyou_message" style="display:none;background:none;border:8px solid gray;border-radius: 40px;width: 400px;padding-top: 15px;padding-bottom: 40px;padding-left: 20px;padding-right: 20px;"><br><br>
-    <h1>Thanks for contacting us!</h1>
-    <h1>*******</h1>
-  </div>
-</form>
+
 
 <script src="js/main.js"></script>
-
+<script src="js/contact.js"></script>
 
 
 </body>
