updated the contact button

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,9 @@
 
         <textarea name="message" placeholder="Your Message" cols="30" rows="10" required></textarea>
 
-        <input type="submit" value="send message" class="btn">
+        <button type="submit" id="sendBtn" class="btn">
+           Send Message <i class="fas fa-paper-plane"></i> 
+        </button>
     </form>
    
 </div>
