--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 <section class="home">
 
     <div class="image">
-        <img src="images/mepic.jpg" alt="">
+        <img src="images/me/5.jpg" alt="">
     </div>
 
     <div class="content">
