--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,9 @@
 
         <textarea name="message" placeholder="Your Message" cols="30" rows="10" required></textarea>
 
-        <input type="submit" value="send message" class="btn">
+        <button type="submit" id="sendBtn" class="btn">
+           Send Message <i class="fas fa-paper-plane"></i> 
+        </button>
     </form>
    
 </div>
@@ -1063,7 +1065,6 @@
 </section>
 
 <!-- contact section ends -->
-
 
 
 <script src="js/main.js"></script>
