added my new project on my portfolio - OJT- TRACKER

--- a/index.html
+++ b/index.html
@@ -671,6 +671,17 @@
                 <a href="https://ispsc.ease-kolar.com/" target="_blank">View Website</a>
             </div>
         </div>
+        <div class="box">
+            <img src="images/web/14.png" alt="" style="  filter: drop-shadow(5px 5px 5px rgb(248, 3,3)); width: 86%; height: 86%;">
+            <div class="content">
+                <h3>PROJECT 16</h3>
+                <h3>OJT-Tracker</h3>
+                <p style="font-size: 10px;">This is my personal project using Laravel to track On-the-Job Trainees’ attendance.
+                The system records daily time-ins and time-outs, automatically calculates total hours rendered, and provides reports for both trainees and administrators. 
+                It aims to reduce manual monitoring, improve accuracy, and make attendance tracking more efficient and transparent.</p>
+                <a href="https://ojt-tracker.personatab.com/" target="_blank">View Website</a>
+            </div>
+        </div>
 
         
 </div>
