--- a/about.html
+++ b/about.html
@@ -288,7 +288,7 @@
                 <a href="#" onclick="event.preventDefault(); openModal('Awards/16.jpg')">Preview</a>
             </div>
         </div>
-        <div class="box">
+        <!-- <div class="box">
             <img src="Awards/17.jpg" alt="">
             <div class="content">
                 <h3>Award 17</h3>
@@ -299,11 +299,11 @@
                 </p>
                 <a href="#" onclick="event.preventDefault(); openModal('Awards/17.jpg')">Preview</a>
             </div>
-        </div>
+        </div> -->
         <div class="box">
             <img src="Awards/18.jpg" alt="">
             <div class="content">
-                <h3>Award 18</h3>
+                <h3>Award 17</h3>
                 <h3>Participant</h3>
                 <p style="font-size: 15px;">
                  participating the JAVA PROGRAMMING during the 12th I.T. Skills Olympics with a theme "The IT Innovators' Gauntlet: Forging Ahead the Future of Technology."
