--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <a href="#" onclick="event.preventDefault(); openModal('Awards/16.jpg')">Preview</a>
             </div>
         </div>
-        <div class="box">
+        <!-- <div class="box">
             <img src="Awards/17.jpg" alt="">
             <div class="content">
                 <h3>Award 17</h3>
@@ -333,11 +333,11 @@
                 </p>
                 <a href="#" onclick="event.preventDefault(); openModal('Awards/17.jpg')">Preview</a>
             </div>
-        </div>
+        </div> -->
         <div class="box">
             <img src="Awards/18.jpg" alt="">
             <div class="content">
-                <h3>Award 18</h3>
+                <h3>Award 17</h3>
                 <h3>Participant</h3>
                 <p style="font-size: 15px;">
                  participating the JAVA PROGRAMMING during the 12th I.T. Skills Olympics with a theme "The IT Innovators' Gauntlet: Forging Ahead the Future of Technology."
@@ -886,6 +886,26 @@
                 <!-- <a href="https://drive.google.com/drive/folders/1Me8FxH7bwaKysUxvSpUFkUOVM_eB4BZG?usp=sharing" 
                 target="_blank">Preview Poster</a> -->
                 <a href="#" onclick="event.preventDefault(); openModal('images/Poster-8.jpg')">Preview Poster</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/Poster-9.jpg" alt="">
+            <div class="content">
+                <h3>Poster 09</h3>
+                <p></p>
+                <!-- <a href="https://drive.google.com/drive/folders/1Me8FxH7bwaKysUxvSpUFkUOVM_eB4BZG?usp=sharing" 
+                target="_blank">Preview Poster</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/Poster-9.jpg')">Preview Poster</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/Poster-10.jpg" alt="">
+            <div class="content">
+                <h3>Poster 10</h3>
+                <p></p>
+                <!-- <a href="https://drive.google.com/drive/folders/1Me8FxH7bwaKysUxvSpUFkUOVM_eB4BZG?usp=sharing" 
+                target="_blank">Preview Poster</a> -->
+                <a href="#" onclick="event.preventDefault(); openModal('images/Poster-10.jpg')">Preview Poster</a>
             </div>
         </div>
 
