--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DL Portfolio</title>
+    <title>About</title>
 
     <link rel="icon" type="image/x-icon" href="images/logo.ico" />
     
@@ -29,6 +29,7 @@
     <a href="home"> <i class="fas fa-home"></i> <span>home</span> </a>
     <a href="about"> <i class="fas fa-user"></i> <span>about</span> </a>
     <a href="portfolio"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
+    <a href="blogs"> <i class="fas fa-blog"></i> <span>blogs</span> </a>
     <a href="contact"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
 </nav>
 
