--- a/blogs.html
+++ b/blogs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blogs</title>
+    <title>Blogs</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -41,12 +41,13 @@
             </div>
             <div class="content">
                 <div class="icons">
-                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
-                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    <a href="#"> <i class="fas fa-calendar"></i> 17 may, 2025 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
                 </div>
-                <h3>blog title goes here.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illum.</p>
-                <a href="#" class="btn"> read more <i class="fas fa-link"></i> </a>
+                <h3>Web Design Category</h3>
+                <p>In recognition of Achieving CHAMPION and Impressive Performance
+                     during CCS WEEK 2025 with a theme "Tech Beyond Boundaries: Fusing Innovation, Sports, Culture, and IT Skills for a Dynamic Future".</p>
+                <a href="https://www.facebook.com/share/1EYRWQDe15/" class="btn"> read more <i class="fas fa-link"></i> </a>
             </div>
         </div>
 
@@ -56,12 +57,12 @@
             </div>
             <div class="content">
                 <div class="icons">
-                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
-                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    <a href="#"> <i class="fas fa-calendar"></i> 21-22 august, 2024 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
                 </div>
-                <h3>blog title goes here.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illum.</p>
-                <a href="#" class="btn"> read more <i class="fas fa-link"></i> </a>
+                <h3>CollabSPACE</h3>
+                <p>Featured photos from SILLAG Startup Summit and Hackathon - Ilocos Sur Leg @ Vigan, Ilocos Sur.</p>
+                <a href="https://www.facebook.com/photo/?fbid=940231794785644&set=a.463046319170863" class="btn"> read more <i class="fas fa-link"></i> </a>
             </div>
         </div>
 
@@ -71,12 +72,12 @@
             </div>
             <div class="content">
                 <div class="icons">
-                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
-                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    <a href="#"> <i class="fas fa-calendar"></i> 21-22 august, 2024</a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
                 </div>
-                <h3>blog title goes here.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illum.</p>
-                <a href="#" class="btn"> read more <i class="fas fa-link"></i> </a>
+                <h3>Team AI-SEE!</h3>
+                <p>Finalists on the STUDENT Category of SILLAG Startup Summit and Hackathon - Ilocos Sur Leg that was held last August 21-22 at the University of Northern Philippines.</p>
+                <a href="https://www.facebook.com/share/p/163Dj1cBBZ/" class="btn"> read more <i class="fas fa-link"></i> </a>
             </div>
         </div>
 
@@ -86,12 +87,12 @@
             </div>
             <div class="content">
                 <div class="icons">
-                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
-                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    <a href="#"> <i class="fas fa-calendar"></i> 10 june, 2024 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
                 </div>
-                <h3>blog title goes here.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illum.</p>
-                <a href="#" class="btn"> read more <i class="fas fa-link"></i> </a>
+                <h3>Java Programming Category</h3>
+                <p>In recognition of Achieving Champion and Impressive Performance during CCS WEEK 2024 with a theme "Tech Fusion: Blending Boundaries and Igniting Possibilities".</p>
+                <a href="https://www.facebook.com/share/16NVAkvV3w/" class="btn"> read more <i class="fas fa-link"></i> </a>
             </div>
         </div>
 
@@ -101,27 +102,27 @@
             </div>
             <div class="content">
                 <div class="icons">
-                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
-                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    <a href="#"> <i class="fas fa-calendar"></i>  10 june, 2024 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
                 </div>
-                <h3>blog title goes here.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illum.</p>
-                <a href="#" class="btn"> read more <i class="fas fa-link"></i> </a>
+                <h3>Web Development Category</h3>
+                <p>In recognition of Achieving 1st Place and Impressive Performance during CCS WEEK 2024 with a theme "Tech Fusion: Blending Boundaries and Igniting Possibilities".</p>
+                <a href="https://www.facebook.com/share/16UEdM3LE3/" class="btn"> read more <i class="fas fa-link"></i> </a>
             </div>
         </div>
 
         <div class="box">
             <div class="image">
-                <img src="images/blog6.jpg" alt="">
+                <img src="Awards/18.jpg" alt="">
             </div>
             <div class="content">
                 <div class="icons">
-                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
-                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    <a href="#"> <i class="fas fa-calendar"></i>November 24, 2024</a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
                 </div>
-                <h3>blog title goes here.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illum.</p>
-                <a href="#" class="btn"> read more <i class="fas fa-link"></i> </a>
+                <h3>Java Programming Category</h3>
+                <p>participating the JAVA PROGRAMMING during the 12th I.T. Skills Olympics with a theme "The IT Innovators' Gauntlet: Forging Ahead the Future of Technology."</p>
+                <a href="https://www.facebook.com/share/r/1B1VqY3hrX/" class="btn"> read more <i class="fas fa-link"></i> </a>
             </div>
         </div>
 
