--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     
 <!-- header section  -->
 
-    <<nav class="navbar">
+<nav class="navbar">
     <a href="home"> <i class="fas fa-home"></i> <span>home</span> </a>
     <a href="about"> <i class="fas fa-user"></i> <span>about</span> </a>
     <a href="portfolio"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
+    <a href="blogs"> <i class="fas fa-blog"></i> <span>blogs</span> </a>
     <a href="contact"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
 </nav>
 
@@ -355,6 +356,115 @@
 </section>
 
 <!-- Awards section ends -->
+
+
+
+<!-- blogs section starts  -->
+
+<section class="blogs">
+
+    <h1 class="heading"> <span>my</span> blogs </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog1.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icons">
+                    <a href="#"> <i class="fas fa-calendar"></i> 17 may, 2025 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
+                </div>
+                <h3>Web Design Category</h3>
+                <p>In recognition of Achieving CHAMPION and Impressive Performance
+                     during CCS WEEK 2025 with a theme "Tech Beyond Boundaries: Fusing Innovation, Sports, Culture, and IT Skills for a Dynamic Future".</p>
+                <a href="https://www.facebook.com/share/1EYRWQDe15/" class="btn"> read more <i class="fas fa-link"></i> </a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog2.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icons">
+                    <a href="#"> <i class="fas fa-calendar"></i> 21-22 august, 2024 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
+                </div>
+                <h3>CollabSPACE</h3>
+                <p>Featured photos from SILLAG Startup Summit and Hackathon - Ilocos Sur Leg @ Vigan, Ilocos Sur.</p>
+                <a href="https://www.facebook.com/photo/?fbid=940231794785644&set=a.463046319170863" class="btn"> read more <i class="fas fa-link"></i> </a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog3.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icons">
+                    <a href="#"> <i class="fas fa-calendar"></i> 21-22 august, 2024</a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
+                </div>
+                <h3>Team AI-SEE!</h3>
+                <p>Finalists on the STUDENT Category of SILLAG Startup Summit and Hackathon - Ilocos Sur Leg that was held last August 21-22 at the University of Northern Philippines.</p>
+                <a href="https://www.facebook.com/share/p/163Dj1cBBZ/" class="btn"> read more <i class="fas fa-link"></i> </a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog4.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icons">
+                    <a href="#"> <i class="fas fa-calendar"></i> 10 june, 2024 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
+                </div>
+                <h3>Java Programming Category</h3>
+                <p>In recognition of Achieving Champion and Impressive Performance during CCS WEEK 2024 with a theme "Tech Fusion: Blending Boundaries and Igniting Possibilities".</p>
+                <a href="https://www.facebook.com/share/16NVAkvV3w/" class="btn"> read more <i class="fas fa-link"></i> </a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog5.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icons">
+                    <a href="#"> <i class="fas fa-calendar"></i>  10 june, 2024 </a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
+                </div>
+                <h3>Web Development Category</h3>
+                <p>In recognition of Achieving 1st Place and Impressive Performance during CCS WEEK 2024 with a theme "Tech Fusion: Blending Boundaries and Igniting Possibilities".</p>
+                <a href="https://www.facebook.com/share/16UEdM3LE3/" class="btn"> read more <i class="fas fa-link"></i> </a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="Awards/18.jpg" alt="">
+            </div>
+            <div class="content">
+                <div class="icons">
+                    <a href="#"> <i class="fas fa-calendar"></i>November 24, 2024</a>
+                    <!-- <a href="#"> <i class="fas fa-user"></i> by admin </a> -->
+                </div>
+                <h3>Java Programming Category</h3>
+                <p>participating the JAVA PROGRAMMING during the 12th I.T. Skills Olympics with a theme "The IT Innovators' Gauntlet: Forging Ahead the Future of Technology."</p>
+                <a href="https://www.facebook.com/share/r/1B1VqY3hrX/" class="btn"> read more <i class="fas fa-link"></i> </a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- blogs section ends -->
+
+
 
 <!-- skills section starts  -->
 
@@ -1021,7 +1131,7 @@
             <div class="content">
                 <h3>Cover Art 01</h3>
                 <p></p>
-                <a href="https://youtu.be/wcuh0HCBkjA?si=d_7qb-9sakl9_EZg" 
+                <a href="https://youtu.be/Vi8X8u8RqHs?si=_Dlbj2WFjeaiu3NX" 
                 target="_blank">Play Music</a>
                 <a href="#" onclick="event.preventDefault(); openModal('images/hoe.png')">Preview</a>
                 
