--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DL Portfolio</title>
+    <title>Portfolio</title>
 
     <link rel="shortcut icon" type="x-icon" href="favicon.jpg">
     
@@ -30,6 +30,7 @@
     <a href="home"> <i class="fas fa-home"></i> <span>home</span> </a>
     <a href="about"> <i class="fas fa-user"></i> <span>about</span> </a>
     <a href="portfolio"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
+    <a href="blogs"> <i class="fas fa-blog"></i> <span>blogs</span> </a>
     <a href="contact"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
 </nav>
 
@@ -555,7 +556,7 @@
             <div class="content">
                 <h3>Cover Art 01</h3>
                 <p></p>
-                <a href="https://youtu.be/wcuh0HCBkjA?si=d_7qb-9sakl9_EZg" 
+                <a href="https://youtu.be/Vi8X8u8RqHs?si=_Dlbj2WFjeaiu3NX" 
                 target="_blank">Play Music</a>
                 <a href="#" onclick="event.preventDefault(); openModal('images/hoe.png')">Preview</a>
                 
